# qbpm

./: .build.yml  .gitignore  CHANGELOG.md  PKGBUILD  README.md  TODO  default.nix  flake.nix  generate_files.py  mypy.ini  pyproject.toml  qbpm-choose  qbpm.1.scd  qbpm.platypus  replace_files.py  requirements.txt  ruff.toml  setup.py  shell.nix
.builds/: arch.yml  aur.yml  latest.yml  nix.yml  other_versions.yml  py36.yml  py37.yml  qbpm.yml
.github/workflows/: publish.yml
completions/: qbpm.fish
config/: ssb.py
contrib/: PKGBUILD  qbpm.desktop  qbpm.platypus
qbpm/: __init__.py  conf.py  config.py  icons.py  main.py  operations.py  profiles.py  utils.py
qpm/: __init__.py  config.py  main.py  operations.py  profiles.py  utils.py
scripts/: nixos-test.sh
src/qbpm/: __init__.py  choose.py  config.py  config.toml  desktop.py  favicon.py  icons.py  launch.py  log.py  main.py  menus.py  operations.py  paths.py  profiles.py  session.py  utils.py
templates/: default.desktop  dir.toml  profile.py  ssb.py
tests/: __init__.py  test.desktop  test_choose.py  test_config.py  test_desktop.py  test_main.py  test_menu.py  test_profiles.py
