[project]
name = "qbpm"
version = "2.0"
description = "qutebrowser profile manager"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "Peter Rice", email = "peter@peterrice.xyz" }]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
requires-python = ">= 3.11"
dependencies = [
    "click",
    "xdg-base-dirs",
    "dacite",
]

[project.urls]
homepage = "https://github.com/pvsr/qbpm"
repository = "https://github.com/pvsr/qbpm"
issues = "https://github.com/pvsr/qbpm/issues"
changelog = "https://github.com/pvsr/qbpm/blob/main/CHANGELOG.md"

[project.scripts]
qbpm = "qbpm.main:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "N",
    "ANN",
    "B",
    "A",
    "C4",
    "PT",
    "SIM",
    "ARG",
    "PTH",
    "PL",
    "RUF",
]
# long lines
ignore = [ "E501" ]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = [ "S101", "ANN201"]
